# yandex-disk-sdk-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
example/: download.cpp
examples/: publish.cpp
include/url/: params.hpp  path.hpp
include/yadisk/: client.hpp
sources/: callbacks.hpp  client.cpp  path.cpp  quote.hpp
tests/client/: patch.cpp  patch.hpp  ping.cpp  publish.cpp
tests/url/: append.cpp  concatination.cpp  swap.cpp
